--- a/pnd.html
+++ b/pnd.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
+    //thanks to perplexity
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="선납이연 계산기 - 예금, 적금, 선납이연 100%, 200%의 이자를 비교 계산합니다.">
-    <title>선납이연 계산기</title>
+    <title>선납이연 계산기 for 김은나</title>
     <style>
         body {
-            font-family: 'Nanum Gothic', Arial, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 20px;
-            line-height: 1.6;
         }
         .container {
-            max-width: 800px;
+            max-width: 600px;
             margin: auto;
             padding: 20px;
-            border: 1px solid #ddd;
+            border: 1px solid #ccc;
             border-radius: 10px;
             background-color: #f9f9f9;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-            text-align: center;
         }
         .input-group {
             margin-bottom: 15px;
@@ -30,84 +24,61 @@
         .input-group label {
             display: block;
             margin-bottom: 5px;
-            font-weight: bold;
-            color: #555;
         }
-        .input-group input {
+        .input-group input, .input-group select {
             width: 100%;
-            padding: 10px;
+            padding: 8px;
             box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
         }
         .button {
             text-align: center;
-            margin-top: 20px;
         }
         .button button {
-            padding: 12px 24px;
+            padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        .button button:hover {
-            background-color: #45a049;
         }
         .result-table {
             width: 100%;
-            margin-top: 30px;
+            margin-top: 20px;
             border-collapse: collapse;
-            box-shadow: 0 2px 3px rgba(0,0,0,0.1);
         }
         .result-table th, .result-table td {
-            border: 1px solid #ddd;
-            padding: 12px;
+            border: 1px solid #ccc;
+            padding: 10px;
             text-align: center;
         }
         .result-table th {
-            background-color: #f2f2f2;
-            font-weight: bold;
-            color: #333;
-        }
-        .result-table tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-        .result-table tr:hover {
-            background-color: #f5f5f5;
-        }
-        @media (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-            .result-table th, .result-table td {
-                padding: 8px;
-                font-size: 14px;
-            }
+            background-color: #f0f0f0;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>선납이연 계산기</h1>
+        <h1>선납이연 계산기 for 김은나</h1>
         <div class="input-group">
             <label for="balance">보유금액:</label>
-            <input type="number" id="balance" aria-label="보유금액" required>
+            <input type="number" id="balance">
         </div>
         <div class="input-group">
             <label for="depositRate">예금이율 (%):</label>
-            <input type="number" id="depositRate" step="0.01" aria-label="예금이율" required>
+            <input type="number" id="depositRate" step="0.01">
         </div>
         <div class="input-group">
             <label for="savingRate">적금이율 (%):</label>
-            <input type="number" id="savingRate" step="0.01" aria-label="적금이율" required>
+            <input type="number" id="savingRate" step="0.01">
         </div>
         <div class="input-group">
             <label for="loanRate">대출이율 (%):</label>
-            <input type="number" id="loanRate" step="0.01" aria-label="대출이율" required>
+            <input type="number" id="loanRate" step="0.01">
+        </div>
+        <div class="input-group">
+            <label for="period">기간 (개월):</label>
+            <select id="period">
+                <option value="12">12개월</option>
+                <option value="24">24개월</option>
+                <option value="36">36개월</option>
+            </select>
         </div>
         <div class="button">
             <button onclick="calculateDeferral()">계산하기</button>
@@ -170,64 +141,75 @@
 
     <script>
         function calculateDeferral() {
-            const balance = parseFloat(document.getElementById('balance').value);
-            const depositRate = parseFloat(document.getElementById('depositRate').value);
-            const savingRate = parseFloat(document.getElementById('savingRate').value);
-            const loanRate = parseFloat(document.getElementById('loanRate').value);
+            var balance = parseFloat(document.getElementById('balance').value);
+            var depositRate = parseFloat(document.getElementById('depositRate').value);
+            var savingRate = parseFloat(document.getElementById('savingRate').value);
+            var loanRate = parseFloat(document.getElementById('loanRate').value);
+            var period = parseInt(document.getElementById('period').value); // 선택된 기간
 
-            if (isNaN(balance) || isNaN(depositRate) || isNaN(savingRate) || isNaN(loanRate)) {
+            if (isNaN(balance) || isNaN(depositRate) || isNaN(savingRate) || isNaN(loanRate) || isNaN(period)) {
                 alert('모든 값을 올바르게 입력해 주세요.');
                 return;
             }
 
-            const taxRate = 0.154;
-            const results = calculateInterests(balance, depositRate, savingRate, loanRate, taxRate);
+            // 예금 세전이자
+            var beforeTaxDeposit = balance * (depositRate / 100) * (period / 12);
+            // 적금 세전이자
+            var beforeTaxSaving = balance * (savingRate / 100) * (1/12) * ((1+2+3+4+5+6+7+8+9+10+11+12)/12) * (period / 12);
+            // 선납이연 100% 세전이자
+            var beforeTaxSaving100 = balance * (savingRate / 100) * (6/12 + 1/12* 6/12 + 1/12 * 5/365) * (period / 12);
+            // 선납이연 200% 세전이자
+            var beforeTaxSaving200 = balance * 2 * (savingRate / 100) * (6/12 + 1/12* 6/12 + 5/12 * 1/365) * (period / 12);
 
-            updateResultTable(results);
-        }
+            // 세후이자 (세율 15.4% 가정)
+            var afterTaxDeposit = beforeTaxDeposit * (1 - 0.154);
+            var afterTaxSaving = beforeTaxSaving * (1 - 0.154);
+            var afterTaxSaving100 = beforeTaxSaving100 * (1 - 0.154);
+            var afterTaxSaving200 = beforeTaxSaving200 * (1 - 0.154);
 
-        function calculateInterests(balance, depositRate, savingRate, loanRate, taxRate) {
-            const beforeTaxDeposit = balance * (depositRate / 100);
-            const beforeTaxSaving = balance * (savingRate / 100) * (13/24);
-            const beforeTaxSaving100 = balance * (savingRate / 100) * (6/12 + 1/12 * 6/12 + 1/12 * 5/365);
-            const beforeTaxSaving200 = balance * 2 * (savingRate / 100) * (6/12 + 1/12 * 6/12 + 5/12 * 1/365);
+            // 대출이자
+            var loanInterestDeposit = balance * (loanRate / 100) * (0/12);
+            var loanInterestSaving = balance * (loanRate / 100) * (0/12);
+            var loanInterestSaving100 = balance * (loanRate / 100) * (1/12 * 6/12 + 5/12 * 1/365) * (period / 12);
+            var loanInterestSaving200 = balance * 2 * (loanRate / 100) * (1/12 * 6/12 + 5/12 * 1/365) * (period / 12);
 
-            const afterTaxDeposit = beforeTaxDeposit * (1 - taxRate);
-            const afterTaxSaving = beforeTaxSaving * (1 - taxRate);
-            const afterTaxSaving100 = beforeTaxSaving100 * (1 - taxRate);
-            const afterTaxSaving200 = beforeTaxSaving200 * (1 - taxRate);
+            // 차액
+            var netProfitDeposit = afterTaxDeposit - afterTaxDeposit;
+            var netProfitSaving = afterTaxSaving - afterTaxDeposit;
+            var netProfitSaving100 = afterTaxSaving100 - afterTaxDeposit;
+            var netProfitSaving200 = afterTaxSaving200 - afterTaxDeposit;
 
-            const loanInterestDeposit = 0;
-            const loanInterestSaving = 0;
-            const loanInterestSaving100 = balance * (loanRate / 100) * (1/12 * 6/12 + 5/12 * 1/365);
-            const loanInterestSaving200 = balance * 2 * (loanRate / 100) * (1/12 * 6/12 + 5/12 * 1/365);
+            // 금리차
+            var netRateDeposit = netProfitDeposit / balance * 100;
+            var netRateSaving = netProfitSaving / balance * 100;
+            var netRateSaving100 = netProfitSaving100 / balance * 100;
+            var netRateSaving200 = netProfitSaving200 / balance * 100;
 
-            const netProfitDeposit = afterTaxDeposit - loanInterestDeposit;
-            const netProfitSaving = afterTaxSaving - loanInterestSaving - afterTaxDeposit;
-            const netProfitSaving100 = afterTaxSaving100 - loanInterestSaving100 - afterTaxDeposit;
-            const netProfitSaving200 = afterTaxSaving200 - loanInterestSaving200 - afterTaxDeposit;
+            // 결과를 테이블에 표시
+            document.getElementById('beforeTaxDeposit').innerText = beforeTaxDeposit.toFixed(2);
+            document.getElementById('beforeTaxSaving').innerText = beforeTaxSaving.toFixed(2);
+            document.getElementById('beforeTaxSaving100').innerText = beforeTaxSaving100.toFixed(2);
+            document.getElementById('beforeTaxSaving200').innerText = beforeTaxSaving200.toFixed(2);
 
-            const netRateDeposit = (netProfitDeposit / balance) * 100;
-            const netRateSaving = (netProfitSaving / balance) * 100;
-            const netRateSaving100 = (netProfitSaving100 / balance) * 100;
-            const netRateSaving200 = (netProfitSaving200 / balance) * 100;
+            document.getElementById('afterTaxDeposit').innerText = afterTaxDeposit.toFixed(2);
+            document.getElementById('afterTaxSaving').innerText = afterTaxSaving.toFixed(2);
+            document.getElementById('afterTaxSaving100').innerText = afterTaxSaving100.toFixed(2);
+            document.getElementById('afterTaxSaving200').innerText = afterTaxSaving200.toFixed(2);
 
-            return {
-                beforeTaxDeposit, beforeTaxSaving, beforeTaxSaving100, beforeTaxSaving200,
-                afterTaxDeposit, afterTaxSaving, afterTaxSaving100, afterTaxSaving200,
-                loanInterestDeposit, loanInterestSaving, loanInterestSaving100, loanInterestSaving200,
-                netProfitDeposit, netProfitSaving, netProfitSaving100, netProfitSaving200,
-                netRateDeposit, netRateSaving, netRateSaving100, netRateSaving200
-            };
-        }
+            document.getElementById('loanInterestDeposit').innerText = loanInterestDeposit.toFixed(2);
+            document.getElementById('loanInterestSaving').innerText = loanInterestSaving.toFixed(2);
+            document.getElementById('loanInterestSaving100').innerText = loanInterestSaving100.toFixed(2);
+            document.getElementById('loanInterestSaving200').innerText = loanInterestSaving200.toFixed(2);
 
-        function updateResultTable(results) {
-            for (const [key, value] of Object.entries(results)) {
-                const element = document.getElementById(key);
-                if (element) {
-                    element.textContent = value.toFixed(2);
-                }
-            }
+            document.getElementById('netProfitDeposit').innerText = netProfitDeposit.toFixed(2);
+            document.getElementById('netProfitSaving').innerText = netProfitSaving.toFixed(2);
+            document.getElementById('netProfitSaving100').innerText = netProfitSaving100.toFixed(2);
+            document.getElementById('netProfitSaving200').innerText = netProfitSaving200.toFixed(2);
+
+            document.getElementById('netRateDeposit').innerText = netRateDeposit.toFixed(2);
+            document.getElementById('netRateSaving').innerText = netRateSaving.toFixed(2);
+            document.getElementById('netRateSaving100').innerText = netRateSaving100.toFixed(2);
+            document.getElementById('netRateSaving200').innerText = netRateSaving200.toFixed(2);
         }
     </script>
 </body>
